Добавлена дата открытия и закрытия аукциона в env

--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+AUCTION_OPEN_DATA="01.08.2019 08:00:00"
+AUCTION_CLOSED_DATA="09.08.2019 16:00:00"
