--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,5 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 AUCTION_OPEN_DATA="01.08.2019 08:00:00"
 AUCTION_CLOSED_DATA="09.08.2019 16:00:00"
+
+TIME_CONFIRMATION=5 #время завершения ожидания подтверждения в минутах
