--- a/.env.example
+++ b/.env.example
@@ -43,7 +43,8 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-AUCTION_OPEN_DATA="01.08.2019 08:00:00"
-AUCTION_CLOSED_DATA="09.08.2019 16:00:00"
+## Параметры больше не актуальны, теперь эти параметры берутся из БД
+#AUCTION_OPEN_DATA="01.08.2019 08:00:00"
+#AUCTION_CLOSED_DATA="09.08.2019 16:00:00"
 
-TIME_CONFIRMATION=5 #время завершения ожидания подтверждения в минутах
+#TIME_CONFIRMATION=5 #время завершения ожидания подтверждения в минутах
